[web] Add: Fix rent card layout issues when the address is too long

--- a/source/web/src/static/styles/project/rentCard.less
+++ b/source/web/src/static/styles/project/rentCard.less
@@ -242,6 +242,7 @@
         >.details {
             overflow: hidden;
             width:100%;
+            height: 65px;
             position: absolute;
             bottom: 0;
             margin-bottom: @padding-top/2;
